@startuml

title __SRC's Class Diagram__\n


    class ChildrenPrice {
        ~ getCharge()
        ~ getPricedCode()
    }

  

    class Customer {
        - name : String
        - rentals : List<Rental>
        + Customer()
        + addRental()
        + getName()
        + htmlStatement()
        + statement()
        - getAmountFor()
        - getTotalCharge()
        - getTotalFrequentRenterPoints()
    }

  


    class Movie {
        {static} + CHILDRENS : int
        {static} + NEW_RELEASE : int
        {static} + REGULAR : int
        - title : String
        + Movie()
        + getPriceCode()
        + getTitle()
        ~ getCharge()
        - setPriceCode()
    }

  


    class NewReleasePrice {
        ~ getCharge()
        ~ getPricedCode()
    }

  


    abstract class Price {
        {abstract} ~ getCharge()
        {abstract} ~ getPricedCode()
    }

  


    class RegularPrice {
        ~ getCharge()
        ~ getPricedCode()
    }

  


    class Rental {
        - daysRented : int
        + Rental()
        + getDaysRented()
        + getMovie()
        ~ calculatePoints()
        ~ getRentalPrice()
    }

  

  ChildrenPrice -up-|> Price
  Movie "*" o-- "1" Price : price
  NewReleasePrice -up-|> Price
  RegularPrice -up-|> Price
  Rental "*" o-- "1" Movie : movie
  Customer "1" --> "*" Rental: rents


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
